--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id" : "H504276D9", /*应用的标识*/
     "name" : "4D五子棋", /*应用名称，程序桌面图标名称*/
     "version" : {
-        "name" : "4.2", /*应用版本名称*/
-        "code" : 10
+        "name" : "4.3.1", /*应用版本名称*/
+        "code" : 12
     },
     "description" : "", /*应用描述信息*/
     "icons" : {
@@ -12,8 +12,8 @@
     },
     "launch_path" : "index.html", /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
     "developer" : {
-        "name" : "", /*开发者名称*/
-        "email" : "", /*开发者邮箱地址*/
+        "name" : "wzh", /*开发者名称*/
+        "email" : "1826632591@qq.com", /*开发者邮箱地址*/
         "url" : "" /*开发者个人主页地址*/
     },
     "permissions" : {
