--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "electron .",
-		"package": "electron-packager . 4D-Gobnag --platform=win32 --arch=ia32 --out=./out --asar --icon=img/icon.png --app-version=5.0.0 --overwrite --ignore=node_modules --electron-version 11.0.3 --registry=https://registry.npm.taobao.org/"
+    "pack-online": "electron-packager . 4D-Gobang --platform=win32 --arch=ia32 --out=./out/online --asar --icon=img/icon.ico --app-version=5.0.0 --overwrite --ignore=.git -ignore=./out/ --ignore=manifest.json --ignore=privacy-policy.html --ignore=unlock.html --electron-version 11.0.3 --registry=https://registry.npm.taobao.org/",
+    "pack-free": "electron-packager . 4D-Gobang --platform=win32 --arch=ia32 --out=./out/free --asar --icon=img/icon.ico --app-version=5.0.0 --overwrite --ignore=.git -ignore=./out/ --ignore=manifest.json --ignore=privacy-policy.html --ignore=rooms.html --ignore=online_2D.html --ignore=online_3D.html --ignore=online_4D.html --electron-version 11.0.3 --registry=https://registry.npm.taobao.org/"
   },
   "repository": {
     "type": "git",
